tests/snapshots/output_contract__action_output_with_diagnostics.snap
---
source: tests/output_contract.rs
expression: out
---
{
  "title": "Import Foo",
  "kind": "quickfix",
  "is_preferred": true,
  "diagnostics": [
    "E0432"
  ]
}
