tests/snapshots/output_contract__affected_file_output.snap
---
source: tests/output_contract.rs
expression: out
---
{
  "file": "src/handler.rs",
  "is_test": false,
  "refs": 7
}
