tests/snapshots/output_contract__apply_action_output_success.snap
---
source: tests/output_contract.rs
expression: out
---
{
  "title": "Import Foo",
  "kind": "quickfix",
  "applied": true,
  "files_changed": 1,
  "changes": [
    {
      "file": "src/main.rs",
      "edit_count": 1
    }
  ]
}
