tests/snapshots/output_contract__blast_radius_max_depth_reached_serializes.snap
---
source: tests/output_contract.rs
expression: radius
---
{
  "direct_callers": 2,
  "transitive_callers": 7,
  "depth": 3,
  "max_depth_reached": true,
  "callers_truncated": true,
  "indexing": "timed_out",
  "callers_by_depth": [
    {
      "depth": 1,
      "count": 2,
      "test": 0,
      "prod": 2
    },
    {
      "depth": 2,
      "count": 3,
      "test": 1,
      "prod": 2
    },
    {
      "depth": 3,
      "count": 2,
      "test": 0,
      "prod": 2
    }
  ],
  "test_caller_ratio": 0.14,
  "risk": "high",
  "confidence": 1.0
}
