tests/snapshots/output_contract__coverage_output_with_files.snap
---
source: tests/output_contract.rs
expression: out
---
{
  "count": 3,
  "files": [
    "tests/integration.rs",
    "tests/api.rs"
  ]
}
