tests/snapshots/output_contract__definition_output_absence_under_degraded_indexing.snap
---
source: tests/output_contract.rs
expression: out
---
{
  "message": "No definition found",
  "indexing": "timed_out"
}
