tests/snapshots/output_contract__definition_output_with_location_only.snap
---
source: tests/output_contract.rs
expression: out
---
{
  "definition": {
    "file": "src/main.rs",
    "line": 20,
    "column": 8
  }
}
