tests/snapshots/output_contract__diagnostics_output_flattened_section_with_status.snap
---
source: tests/output_contract.rs
expression: out
---
{
  "file": "src/main.rs",
  "status": "unconfirmed",
  "count": 1,
  "showing": 1,
  "items": [
    {
      "severity": "error",
      "message": "type mismatch",
      "line": 30,
      "column": 8,
      "end_line": 30,
      "end_column": 16,
      "code": "E0308",
      "source": "rust-analyzer"
    }
  ]
}
