tests/snapshots/output_contract__file_change_output.snap
---
source: tests/output_contract.rs
expression: out
---
{
  "file": "src/api.rs",
  "edit_count": 4
}
