tests/snapshots/output_contract__hover_output_full.snap
---
source: tests/output_contract.rs
expression: out
---
{
  "content": "fn process(&self)",
  "range": {
    "file": "src/main.rs",
    "line": 12,
    "column": 4
  }
}
